corrected colors and fine tined spacing and positioning

--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 body {
-    font-family: arial;
-    color: white;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    color: #777;
     background-color: #777;
     width: 960px;
     font-size: 18px;
     text-align: center;
+    padding-left: 100px;
 }
 
 .header {
     clear:both;
+    height: 35px;
     padding:25px;
-    background-color:gray;
+    background-color: #ebebeb;
     margin-top: 10px;;
     margin-bottom:10px;
     text-align:center;
@@ -18,8 +20,9 @@ body {
 
 .nav {
     clear:both;
+    height: 35px;
     padding:25px;
-    background-color:gray;
+    background-color: #ebebeb;
     margin-top: 10px;
     margin-bottom:20px;
     text-align:center;
@@ -27,42 +30,54 @@ body {
 
 .aside {
     float:right;
-    background-color:gray;
+    background-color: #ebebeb;
     padding:20px;
     width:46%;
     text-align:center;
     box-sizing: border-box;
-    height:155px;
+    height:225px;
     margin-right: 0px;
 }
 
 .section {
-    background-color:gray;
+    background-color: #ebebeb;
     padding:20px;
     width:495px;
-    height: 155px;
+    height: 225px;
     text-align:center;
     box-sizing:border-box;
 }
 
 .article {
-    background-color: white;
+    color: #ebebeb;
+    background-color: #777;
     padding:5px;
-    color: black;
     box-sizing:border-box;
+    margin-top: 25px;
 }
 
 .headergroup {
- background-color: black;
- color: white;
+    color: #777bac;
+    background-color: #ebebeb;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 35px;
+    font-weight: bold;
+    padding-top: 15px;
+ 
 }
 
 .p {
-    background-color:black;
+    height: 35px;
     padding:5px;
-    color:white;
+    color: #777bac;
+    background-color: #ebebeb;
     box-sizing:border-box;
     margin-top:10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 
 }
 
@@ -70,8 +85,8 @@ body {
     text-align: center;
     box-sizing: border-box;
     padding: 10px;
-    background-color: black;
-    color: white;
+    background-color: #ebebeb;
     margin-top: 20px;
     height: 100px;
+    padding-top: 40px;
 }
